# TheRayCode

./: .gitignore  .~lock.Untitled 1.odp#  4-laws  HTML.html  README.md  Untitled 1.odp  mysshkey.pub  mysshkey.pub.pub  note.md  text.txt  text2.txt
CPP/: README.md
CPP/Abstract Factory/: AbstractFactory.cpp  AbstractFactory.h  AbstractProductA.cpp  AbstractProductA.h  AbstractProductB.cpp  AbstractProductB.h  CMakeLists.txt  SolidFactory1.cpp  SolidFactory1.h  SolidFactory2.cpp  SolidFactory2.h  SolidProductA1.cpp  SolidProductA1.h  SolidProductA2.cpp  SolidProductA2.h  SolidProductB1.cpp  SolidProductB1.h  SolidProductB2.cpp  SolidProductB2.h  main.cpp
CPP/AbstractFactory/: AbstractFactory.h  AbstractProductB.h  CMakeLists.txt  ConcreteFactory1.h  Factory1.h  Factory2.h  Product1.h  Product1a.h  Product1b.h  Product2.h  Product2a.h  Product2b.h  ProductA.h  ProductA1.h  ProductA2.h  ProductB.h  ProductB1.h  ProductB2.h  README.md  main.cpp
CPP/AbstractFactory1/: CMakeLists.txt  Client.cpp
CPP/AbstractFactory2/: CMakeLists.txt  ConfigurationManager.h  IBMConfigurationManager.h  IBMOperationManager.h  IBMSMFactory.h  OperationManager.h  SystemManagementFactory.h  UnisysConfigurationManager.h  UnisysOperationManager.h  UnisysSMFactory.h  main.cpp
CPP/AbstractFactory3/: AbstractProductA.h  CMakeLists.txt  ConcreteFactory1.h  ConcreteFactory2.h  ConfigurationManager.h  ProductB1.h  (+6 more)
CPP/AbstractFactory4/: CMakeLists.txt
CPP/ChainOfResponsibility/: AbstractHandler.cpp  CMakeLists.txt  DogHandler.cpp  DogHandler.h  Handler.cpp  Handler.h  MonkeyHandler.cpp  MouseHandler.h  README.md  RabbitHandler.h  SquirrelHandler.cpp  SquirrelHandler.h  main  main.cpp
CPP/ChainOfResponsibility/COR1/: AbstractHandler.h  README.md
CPP/Creational/AbstractFactory/AF3/: CMakeLists.txt  README.md  main.cpp
CPP/Creational/AbstractFactory/Example/: BreakfastFactory.h  CMakeLists.txt  Dessert.h  DessertFactory.h  Lunch.h  LunchFactory.h  MealFactory.h  README.md
CPP/Creational/AbstractFactory/Example/script/: page05.md  page09.md  page11.md  page12.md
CPP/Creational/AbstractFactory/Example2/: Animal.h  Breakfast.h  CMakeLists.txt  Cat.h  ConcreteMealFactory.h  DomesticAnimalFactory.h  Fox.h  LunchFactory.h  Poodle.h  README.md  Siamese.h  Tiger.h  Wolf.h  main.cpp
CPP/Creational/AbstractFactory/Example2/script/: page01.md  page02.md  page03.md  page04.md  page05.md  page06.md  page07.md  page08.md  page09.md  page10.md  page11.md  page12.md  page13.md  page14.md  page15.md  page16.md  page17.md
CPP/Decorator/: CMakeLists.txt  Component.h  ConcreteComponent.cpp  ConcreteComponent.h  ConcreteDecoratorA.cpp  ConcreteDecoratorA.h  ConcreteDecoratorB.cpp  ConcreteDecoratorB.h  Decorator.cpp  Decorator.h  README.md  main.cpp
CPP/Decorator/D1/: ConcreteDecoratorA.h
CPP/Show/: AbstractFactory.h  AbstractHandler.h  AbstractProductA.h  AbstractProductB.h  Abstraction.h  Animal.h  AnimalFactory.h  Builder.h  CMakeLists.txt  Cat.h  Cheetah.h  Collie.h  Component.h  ConcreteBuilder.h  ConcreteComponent.h  ConcreteDecoratorA.h  ConcreteDecoratorB.h  ConcreteFactory1.h  ConcreteFactory2.h  ConcreteImplementationA.h  ConcreteImplementationB.h  ConcretePrototype1.h  ConcretePrototype2.h  Creator.h  CreatorA.h  CreatorB.h  Decorator.h  Director.h  Dog.h  DogHandler.h  DomesticAnimalFactory.h  DomesticCat.h  ExtendedAbstraction.h  Factory.h  Flyweight.h  FlyweightFactory.h  Fox.h  Handler.h  Hyena.h  Implementation.h  (+23 more)
CPP/stage/Stage/: AnimalFactory.h  Breakfast.h  BreakfastFactory.h  CMakeLists.txt  Clown.h  ClownPrototype.h  ClubSandwichBuilder.h  ConcreteMealFactory.h  ConcretePrototype.h  Dessert.h  DessertBuilder.h  DessertDirector.h  DessertFactory.h  Dinner.h  DinnerFactory.h  Lion.h  Lunch.h  LunchFactory.h  Meal.h  MealFactory.h  Pizza.h  PizzaBuilder.h  Prototype.h  Sandwich.h  SandwichBuilder.h  SandwichDirector.h  Shepherd.h  main.cpp
Csharp/: README.md  patterns.md
Java/: README.md
JavaScript/: README.md
Language/: README.md
Language/CPP/Behavioral/State/Example3/: CMakeLists.txt  IdleState.h  State.h
PHP/: README.md
UMLs/: AbstractFactory084.dia  AbstractFactory087.dia  AbstractFactory088.dia  AbstractFactory_1.dia  AbstractFactory_2.dia  AbstractFactory_4.dia  AdapterDotNet.dia  Builder097.dia  Builder098-cs.dia  Builder098.dia  ChainOfResponsibity225.dia  ChainOfResponsibity225.dia.autosave  ChainOfResponsibity225a.dia  Command234.dia  Command236.dia  Composite164.dia  Decorator177.dia  Factory103.dia  Factory104.dia  Factory110.dia  Flyweight198.dia  GOF_015a.dia  Intrpreter245.dia  Mediator276.dia  Mediator281.dia  Memento285.dia  Observer294-1.dia  Observer294.dia  Prototype118.dia  Prototype119.dia  Proxy209.dia  State306.dia  Strategy315.dia  Template327.dia  Visitor331.dia  Visitor332.dia  Visitor334.dia
base/: bible_prompt.md  convert20251107.md  fix-2.md  todo.md
pictures/: README.md
pythonProject/: main.py
script/: page06.md  page11.md
stuff/: nutrition.md
(+6453 files in other folders)
